refactor: испралено в соответсктвии с комментариями